--- a/Pluto/Base.lproj/Main.storyboard
+++ b/Pluto/Base.lproj/Main.storyboard
@@ -402,7 +402,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2nu-Gk-QTX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="749.60000000000002" y="1218.440779610195"/>
+            <point key="canvasLocation" x="1249" y="1260"/>
         </scene>
         <!--Folding Tab Bar Controller-->
         <scene sceneID="N4W-gz-UbC">
